$Id: History,v 1.61 2001-11-19 12:29:38 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

19th November 2001  John Allison (examples-V03-02-02)
- Updated VisManagers for new graphics systems and defaults.

23-Oct-2001 Gabriele Cosmo (examples-V03-02-01)
- Synchronised with HEAD revision. Removal of all occurences of RW wrappers.

25-Jan-2001 Steve O'Neale (examples-V03-00-00) 
- Updated all "small_N" test outputs

18th Nov 2000 Steve O'Neale (examples-V02-00-05) 
- Updated test 102,104,508 outputs

9th August 2000 Steve O'Neale (examples-V02-00-00)
- Updated all (except large_N) .out files ready for public patch
  geant4-02-00

24th June 2000  John Allison  (examples-V01-01-08)
- Updated .out files where necessary for stand-V01-01-05 and utils-V01-01-03.

17th June 2000  John Allison  (examples-V01-01-07)
- Updated all .out files for geant4-01-01-ref-06.

8th June 2000  John Allison  (examples-V01-01-06)
- geant4-01-01-ref-05 + exampleN03-V01-01-00 + exampleN03-V01-01-01 +
  exampleN04-V01-01-00 + PersistentEx01-V01-00-00 + PersistentEx01-V01-00-00.

5th June 2000  Steve O'Neale (examples-V01-01-05) 
- Updated N02 and N04.out for geant4-01-01-ref-05

26th May 2000  John Allison  (examples-V01-01-04)