@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: Em10VisManager.cc,v 1.2 2001-07-11 09:57:27 gunter Exp $
+// $Id: Em10VisManager.cc,v 1.3 2001-12-12 15:22:30 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -36,12 +36,19 @@
 
 // Supported drivers...
 
+// Not needing external packages or libraries...
+#include "G4ASCIITree.hh"
+#include "G4DAWNFILE.hh"
+#include "G4GAGTree.hh"
+#include "G4HepRepFile.hh"
+#include "G4RayTracer.hh"
+#include "G4VRML1File.hh"
+#include "G4VRML2File.hh"
+
+// Needing external packages or libraries...
+
 #ifdef G4VIS_USE_DAWN
 #include "G4FukuiRenderer.hh"
-#endif
-
-#ifdef G4VIS_USE_DAWNFILE
-#include "G4DAWNFILE.hh"
 #endif
 
 #ifdef G4VIS_USE_OPACS
@@ -72,18 +79,9 @@
 #include "G4OpenInventorWin32.hh"
 #endif
 
-#ifdef G4VIS_USE_RAYX
-#include "G4RayX.hh"
-#endif
-
 #ifdef G4VIS_USE_VRML
 #include "G4VRML1.hh"
-// #include "G4VRML2.hh"
-#endif
-
-#ifdef G4VIS_USE_VRMLFILE
-#include "G4VRML1File.hh"
-//#include "G4VRML2File.hh"
+#include "G4VRML2.hh"
 #endif
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
@@ -94,12 +92,19 @@ Em10VisManager::Em10VisManager () {}
 
 void Em10VisManager::RegisterGraphicsSystems () {
 
+  // Graphics Systems not needing external packages or libraries...
+  RegisterGraphicsSystem (new G4ASCIITree);
+  RegisterGraphicsSystem (new G4DAWNFILE);
+  RegisterGraphicsSystem (new G4GAGTree);
+  RegisterGraphicsSystem (new G4HepRepFile);
+  RegisterGraphicsSystem (new G4RayTracer);
+  RegisterGraphicsSystem (new G4VRML1File);
+  RegisterGraphicsSystem (new G4VRML2File);
+
+  // Graphics systems needing external packages or libraries...
+
 #ifdef G4VIS_USE_DAWN
   RegisterGraphicsSystem (new G4FukuiRenderer);
-#endif
-
-#ifdef G4VIS_USE_DAWNFILE
-  RegisterGraphicsSystem (new G4DAWNFILE);
 #endif
 
 #ifdef G4VIS_USE_OPACS
@@ -130,18 +135,9 @@ void Em10VisManager::RegisterGraphicsSystems () {
   RegisterGraphicsSystem (new G4OpenInventorWin32);
 #endif
 
-#ifdef G4VIS_USE_RAYX
-  RegisterGraphicsSystem (new G4RayX);
-#endif
-
 #ifdef G4VIS_USE_VRML
   RegisterGraphicsSystem (new G4VRML1);
-// RegisterGraphicsSystem (new G4VRML2);
-#endif
-
-#ifdef G4VIS_USE_VRMLFILE
-  RegisterGraphicsSystem (new G4VRML1File);
-// RegisterGraphicsSystem (new G4VRML2File);
+  RegisterGraphicsSystem (new G4VRML2);
 #endif
 
   if (fVerbose > 0) {
