@@ -1,4 +1,4 @@
-$Id: History,v 1.61 2001-11-19 12:29:38 johna Exp $
+$Id: History,v 1.62 2001-12-12 15:22:31 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+12th December 2001  John Allison (examples-V03-02-04)
+- Updated new VisManagers for new graphics systems and defaults.
 
 19th November 2001  John Allison (examples-V03-02-02)
 - Updated VisManagers for new graphics systems and defaults.
